--- a/Ancom.ipynb
+++ b/Ancom.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d9dc25a8-8ca7-4492-9de7-57988c153ad8",
    "metadata": {},
    "outputs": [],
@@ -37,18 +37,350 @@
     "Artifacts we need to run this Notebook:\n",
     "1. feature table = 'dada2_table_align_filtered.qza'\n",
     "2. metadata table = 'food-metadata.tsv'\n",
-    "3. taxonomic classification = 'taxonomy_v4.qza'"
+    "3. taxonomic classification = 'taxonomy_v4.qza'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a088698b-d8d2-4d6c-83cc-93d64f908e3b",
    "metadata": {},
    "outputs": [],
    "source": [
     "##Data Exploration"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c53292b1-245d-484b-9224-24da72a3da7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "No format: BIOMV210DirFmt",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/sdk/util.py:90\u001b[0m, in \u001b[0;36mparse_format\u001b[0;34m(format_str)\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 90\u001b[0m     format_record \u001b[38;5;241m=\u001b[39m \u001b[43mpm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mformats\u001b[49m\u001b[43m[\u001b[49m\u001b[43mformat_str\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'BIOMV210DirFmt'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mq2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mArtifact\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mdata_dir\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/dada2_table_align_filtered.qza\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mview(pd\u001b[38;5;241m.\u001b[39mDataFrame)\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/sdk/result.py:66\u001b[0m, in \u001b[0;36mResult.load\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(\u001b[38;5;28mcls\u001b[39m, filepath):\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;124;03m\"\"\"Factory for loading Artifacts and Visualizations.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 66\u001b[0m     archiver \u001b[38;5;241m=\u001b[39m \u001b[43marchive\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mArchiver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m Artifact\u001b[38;5;241m.\u001b[39m_is_valid_type(archiver\u001b[38;5;241m.\u001b[39mtype):\n\u001b[1;32m     69\u001b[0m         result \u001b[38;5;241m=\u001b[39m Artifact\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__new__\u001b[39m(Artifact)\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/core/archive/archiver.py:307\u001b[0m, in \u001b[0;36mArchiver.load\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m    304\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m_make_temp_path()\n\u001b[1;32m    305\u001b[0m rec \u001b[38;5;241m=\u001b[39m archive\u001b[38;5;241m.\u001b[39mmount(path)\n\u001b[0;32m--> 307\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m(path, \u001b[43mFormat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrec\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/core/archive/format/v1.py:29\u001b[0m, in \u001b[0;36mArchiveFormat.__init__\u001b[0;34m(self, archive_record)\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, archive_record):\n\u001b[0;32m---> 29\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43marchive_record\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprovenance_dir \u001b[38;5;241m=\u001b[39m archive_record\u001b[38;5;241m.\u001b[39mroot \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mPROVENANCE_DIR\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/core/archive/format/v0.py:73\u001b[0m, in \u001b[0;36mArchiveFormat.__init__\u001b[0;34m(self, archive_record)\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39muuid \u001b[38;5;241m=\u001b[39m _uuid\u001b[38;5;241m.\u001b[39mUUID(uuid)\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtype \u001b[38;5;241m=\u001b[39m sdk\u001b[38;5;241m.\u001b[39mparse_type(\u001b[38;5;28mtype\u001b[39m)\n\u001b[0;32m---> 73\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mformat \u001b[38;5;241m=\u001b[39m \u001b[43msdk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparse_format\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mformat\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     75\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpath \u001b[38;5;241m=\u001b[39m path\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata_dir \u001b[38;5;241m=\u001b[39m path \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mDATA_DIR\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/sdk/util.py:92\u001b[0m, in \u001b[0;36mparse_format\u001b[0;34m(format_str)\u001b[0m\n\u001b[1;32m     90\u001b[0m     format_record \u001b[38;5;241m=\u001b[39m pm\u001b[38;5;241m.\u001b[39mformats[format_str]\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[0;32m---> 92\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo format: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m format_str)\n\u001b[1;32m     93\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m format_record\u001b[38;5;241m.\u001b[39mformat\n",
+      "\u001b[0;31mTypeError\u001b[0m: No format: BIOMV210DirFmt"
+     ]
+    }
+   ],
+   "source": [
+    "data = q2.Artifact.load(f'{data_dir}/dada2_table_align_filtered.qza').view(pd.DataFrame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4ac28e0-6e96-4172-83b0-bc66cd39d031",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8f13126-ffaf-4614-ad4b-71c3659f3ee6",
+   "metadata": {},
+   "source": [
+    "##ANCOM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8844be79-0b05-4d1b-8dcf-ed8ad5537483",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/table_abund254.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime feature-table filter-features \\\n",
+    "--i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "--p-min-frequency 25 \\\n",
+    "--p-min-samples 4 \\\n",
+    "--o-filtered-table $data_dir/table_abund254.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "32e49184-7d5f-404d-8ef4-920c143b4478",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/table_abund254_continent.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#example: comparing diff. abundance within continents\n",
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/table_abund254.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[continent]='North_America' or [continent]='Europe'\" \\\n",
+    "--o-filtered-table $data_dir/table_abund254_continent.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "603b0b3a-78b6-4d9c-a988-ec7d8c5d7250",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Composition] to: CE/table_abund254_continent_comp.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime composition add-pseudocount \\\n",
+    "--i-table $data_dir/table_abund254_continent.qza \\\n",
+    "--o-composition-table $data_dir/table_abund254_continent_comp.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0fc2d27b-4406-488e-b61c-c855cbc32ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/ancom254_continent.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime composition ancom \\\n",
+    "--i-table $data_dir/table_abund254_continent_comp.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--m-metadata-column continent \\\n",
+    "--p-transform-function log \\\n",
+    "--o-visualization $data_dir/ancom254_continent.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "578c75bd-1f4f-4453-9257-5dc163167e40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-wh88yjlh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: ad5978df-bdcf-4ca2-8eeb-394976fe81f4>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/ancom254_continent.qzv')"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "728ffdd0-a79f-46e6-9007-a2c7c7b21a91",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ce773b16-5b6c-4032-8088-5352e3162d87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/table_abund254_rindtype1.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#example: comparing diff. abundance within rindtype (washed or natural)\n",
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/table_abund254.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[rindtype]='washed' or [rindtype]='natural'\" \\\n",
+    "--o-filtered-table $data_dir/table_abund254_rindtype1.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f963e693-3f30-468c-98fb-1f6b81f901d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Composition] to: CE/table_abund254_rindtype1_comp.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime composition add-pseudocount \\\n",
+    "--i-table $data_dir/table_abund254_rindtype1.qza \\\n",
+    "--o-composition-table $data_dir/table_abund254_rindtype1_comp.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3171b48d-2a29-475b-9aa2-e950fd874960",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/ancom254_rindtype1.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime composition ancom \\\n",
+    "--i-table $data_dir/table_abund254_rindtype1_comp.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--m-metadata-column rindtype \\\n",
+    "--p-transform-function log \\\n",
+    "--o-visualization $data_dir/ancom254_rindtype1.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b549df62-44ab-4f49-847e-4fefb3ca1d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ctdvkgml')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 4ccc42b7-b28d-4342-a875-be695488a917>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/ancom254_rindtype1.qzv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "522264c8-aec9-4900-b9a3-3920176ea6a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
