added some notes

--- a/Ancom.ipynb
+++ b/Ancom.ipynb
@@ -115,6 +115,7 @@
     }
    ],
    "source": [
+    "#only retain features that are present at some minimal frequency (25) and in at least 4 samples\n",
     "! qiime feature-table filter-features \\\n",
     "--i-table $data_dir/dada2_table_align_filtered.qza \\\n",
     "--p-min-frequency 25 \\\n",
