--- a/Ancom.ipynb
+++ b/Ancom.ipynb
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "8844be79-0b05-4d1b-8dcf-ed8ad5537483",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "32e49184-7d5f-404d-8ef4-920c143b4478",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "603b0b3a-78b6-4d9c-a988-ec7d8c5d7250",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "0fc2d27b-4406-488e-b61c-c855cbc32ef0",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "578c75bd-1f4f-4453-9257-5dc163167e40",
    "metadata": {},
    "outputs": [
@@ -793,13 +793,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-wh88yjlh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-5lqh1x2n')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: ad5978df-bdcf-4ca2-8eeb-394976fe81f4>"
+       "<visualization: Visualization uuid: 5a396199-ab44-4629-b1e5-7372795d30ad>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "ce773b16-5b6c-4032-8088-5352e3162d87",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "f963e693-3f30-468c-98fb-1f6b81f901d6",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "3171b48d-2a29-475b-9aa2-e950fd874960",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "b549df62-44ab-4f49-847e-4fefb3ca1d62",
    "metadata": {},
    "outputs": [
@@ -922,19 +922,20 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ctdvkgml')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ijgamdox')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 4ccc42b7-b28d-4342-a875-be695488a917>"
+       "<visualization: Visualization uuid: 6fe79d08-1d21-4913-b78a-0bd538dedd9a>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Visualization.load(f'{data_dir}/ancom254_rindtype1.qzv')"
+    "Visualization.load(f'{data_dir}/ancom254_rindtype1.qzv')\n",
+    "#washed vs. natural"
    ]
   },
   {
