added ancom for various groups

--- a/Ancom.ipynb
+++ b/Ancom.ipynb
@@ -809,12 +809,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "728ffdd0-a79f-46e6-9007-a2c7c7b21a91",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "ce773b16-5b6c-4032-8088-5352e3162d87",
@@ -940,8 +934,376 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "522264c8-aec9-4900-b9a3-3920176ea6a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/table_abund254_rindtype2.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved FeatureTable[Composition] to: CE/table_abund254_rindtype2_comp.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved Visualization to: CE/ancom254_rindtype2.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#example: comparing diff. abundance within rindtype (bloomy or natural)\n",
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/table_abund254.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[rindtype]='bloomy' or [rindtype]='natural'\" \\\n",
+    "--o-filtered-table $data_dir/table_abund254_rindtype2.qza\n",
+    "\n",
+    "! qiime composition add-pseudocount \\\n",
+    "--i-table $data_dir/table_abund254_rindtype1.qza \\\n",
+    "--o-composition-table $data_dir/table_abund254_rindtype2_comp.qza\n",
+    "\n",
+    "! qiime composition ancom \\\n",
+    "--i-table $data_dir/table_abund254_rindtype2_comp.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--m-metadata-column rindtype \\\n",
+    "--p-transform-function log \\\n",
+    "--o-visualization $data_dir/ancom254_rindtype2.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3adc95d0-0ab1-440c-b08b-3293c09cb658",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-6ynulivq')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 566e004d-345b-4df2-b714-47950a56496c>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/ancom254_rindtype2.qzv')\n",
+    "#bloomy vs. natural"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1f535a32-159f-4e83-8674-86225c53c59f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/table_abund254_rindtype3.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved FeatureTable[Composition] to: CE/table_abund254_rindtype3_comp.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved Visualization to: CE/ancom254_rindtype3.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#example: comparing diff. abundance within rindtype (bloomy or washed)\n",
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/table_abund254.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[rindtype]='bloomy' or [rindtype]='washed'\" \\\n",
+    "--o-filtered-table $data_dir/table_abund254_rindtype3.qza\n",
+    "\n",
+    "! qiime composition add-pseudocount \\\n",
+    "--i-table $data_dir/table_abund254_rindtype3.qza \\\n",
+    "--o-composition-table $data_dir/table_abund254_rindtype3_comp.qza\n",
+    "\n",
+    "! qiime composition ancom \\\n",
+    "--i-table $data_dir/table_abund254_rindtype3_comp.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--m-metadata-column rindtype \\\n",
+    "--p-transform-function log \\\n",
+    "--o-visualization $data_dir/ancom254_rindtype3.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d0838900-3715-4833-a5e2-909997a68e6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-p6adlxnu')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 4c356061-5e6a-476f-9175-f3bacd290742>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/ancom254_rindtype3.qzv')\n",
+    "#bloomy vs. washed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "32389114-d02a-4504-8240-fc5713d45773",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/table_abund254_style1.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved FeatureTable[Composition] to: CE/table_abund254_style1_comp.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved Visualization to: CE/ancom254_style1.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#example: comparing diff. abundance within style (blue or clothbound)\n",
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/table_abund254.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[style]='blue' or [style]='clothbound'\" \\\n",
+    "--o-filtered-table $data_dir/table_abund254_style1.qza\n",
+    "\n",
+    "! qiime composition add-pseudocount \\\n",
+    "--i-table $data_dir/table_abund254_style1.qza \\\n",
+    "--o-composition-table $data_dir/table_abund254_style1_comp.qza\n",
+    "\n",
+    "! qiime composition ancom \\\n",
+    "--i-table $data_dir/table_abund254_style1_comp.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--m-metadata-column style \\\n",
+    "--p-transform-function log \\\n",
+    "--o-visualization $data_dir/ancom254_style1.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "48952383-d53d-4da6-893d-d49b271b4153",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-tyqbuv66')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 5a996b96-aaec-4daf-a081-40053e033fbf>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/ancom254_style1.qzv')\n",
+    "#blue vs. clothbound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a9da4b44-d90c-470f-9411-1ba77d64c080",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/table_abund254_pasteurized.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved FeatureTable[Composition] to: CE/table_abund254_pasteurized_comp.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved Visualization to: CE/ancom254_pasteurized.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#example: comparing diff. abundance within pasteurized (Y or N)\n",
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/table_abund254.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--p-where \"[pasteurized]='Y' or [pasteurized]='N'\" \\\n",
+    "--o-filtered-table $data_dir/table_abund254_pasteurized.qza\n",
+    "\n",
+    "! qiime composition add-pseudocount \\\n",
+    "--i-table $data_dir/table_abund254_pasteurized.qza \\\n",
+    "--o-composition-table $data_dir/table_abund254_pasteurized_comp.qza\n",
+    "\n",
+    "! qiime composition ancom \\\n",
+    "--i-table $data_dir/table_abund254_pasteurized_comp.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--m-metadata-column pasteurized \\\n",
+    "--p-transform-function log \\\n",
+    "--o-visualization $data_dir/ancom254_pasteurized.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5b94a59c-e383-4ea5-82ca-46fe280f6c9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-doiifhet')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 8fdd2837-26b4-438f-99ed-febcd0259929>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/ancom254_pasteurized.qzv')\n",
+    "#Y vs. N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "289efb3c-d6ef-4ad1-8098-005f78cb72a7",
    "metadata": {},
    "outputs": [],
    "source": []
